--- a/mup/package.json
+++ b/mup/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "date-fns": "^2.29.3",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1"
   },
